Styling for active route

--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -160,8 +160,12 @@ NAVBAR
 
 ****/
 
+.active {
+    background-color: #2b5064;
+}
+
 #nav-container {
-    background-color: #002c44d4;
+    background-color: #2b5064;
 }
 
 .nav {
