--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -94,6 +94,7 @@ COMPLETION
 
 #completion {
     display: flex;
+    flex-direction: column;
     position: absolute;
     margin: auto;
     justify-content: center;
@@ -160,6 +161,28 @@ COMPLETION
         margin-top: -180px;
         top: 50%;
     }
+}
+
+#confetti {
+    color: white;
+}
+
+#button-container > input {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+    cursor: pointer;
+    border: 1px solid white;
+    padding: 15px;
+    margin: 6px;
+    border-radius: 1em;
+}
+
+#button-container > input:hover {
+    color: black;
+    background-color: white;
+    border: none;
+    margin: 7px;
 }
 
 /****
