--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -311,3 +311,24 @@ label #uncheck {
 API & ABOUT
 
 ****/
+
+pre code {
+    background-color: #eee;
+    border: 1px solid #999;
+    display: block;
+    padding: 20px;
+}
+
+@media (max-width: 420px) {
+    pre code {
+        background-color: #eee;
+        border: 1px solid #999;
+        display: block;
+        font-size: 11px;
+        padding: 20px;
+    }
+}
+
+hr {
+    margin-top: 30px;
+}
