--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -71,6 +71,7 @@ BOARD
 }
 
 .number-container>div {
+    padding: 10px;
     margin: 5px;
     background-color: #80808080;
     border-radius: 1em;
